[*] Fix dark mode text color

--- a/src/assets/markdown.css
+++ b/src/assets/markdown.css
@@ -39,7 +39,6 @@
   --n-bar-color: #18a058;
   --n-bar-width: 4px;
   --n-font-weight: 500;
-  --n-text-color: rgb(31, 34, 37);
   --n-prefix-width: 16px;
 }
 
@@ -50,7 +49,6 @@
   --n-bar-color: #18a058;
   --n-bar-width: 4px;
   --n-font-weight: 500;
-  --n-text-color: rgb(31, 34, 37);
   --n-prefix-width: 16px;
 }
 
@@ -61,7 +59,6 @@
   --n-bar-color: #18a058;
   --n-bar-width: 3px;
   --n-font-weight: 500;
-  --n-text-color: rgb(31, 34, 37);
   --n-prefix-width: 12px;
 }
 
@@ -72,7 +69,6 @@
   --n-bar-color: #18a058;
   --n-bar-width: 3px;
   --n-font-weight: 500;
-  --n-text-color: rgb(31, 34, 37);
   --n-prefix-width: 12px;
 }
 
@@ -83,7 +79,6 @@
   --n-bar-color: #18a058;
   --n-bar-width: 3px;
   --n-font-weight: 500;
-  --n-text-color: rgb(31, 34, 37);
   --n-prefix-width: 12px;
 }
 
@@ -94,6 +89,5 @@
   --n-bar-color: #18a058;
   --n-bar-width: 3px;
   --n-font-weight: 500;
-  --n-text-color: rgb(31, 34, 37);
   --n-prefix-width: 12px;
 }
